major changes set foerign keys